--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
